# robo-face

./: .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  build.rs  simulate.py
.github/workflows/: build_container.yaml
src/: main.rs
toradex-files/: README.md  aclient.py  compose.yaml  mocked_client.py
ui/: eye.slint  eyebrow.slint  face.slint  main_window.slint  mouth.slint  palette.slint
