[package]
name = "robo-face"
version = "0.0.1"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
license = "MIT"
publish = false

[[bin]]
name = "robo-face"

[dependencies]
futures-util = "0.3.30"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"
slint = { version = "1.5.1", features = ["serde"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
warp = "0.3.6"

[build-dependencies]
slint-build = { version = "1.5.1" }
